{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 309,
  "lineage": "d63a748c-3016-2c91-6b80-f0f7c2b884a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:route-table/rtb-0c673d6df286a6f69",
            "id": "rtb-0c673d6df286a6f69",
            "owner_id": "891288190130",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "eks_lab_vpc_private_rt",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "eks_lab_vpc_private_rt",
              "infra": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f1c94ff57ee8b1f",
            "route_table_id": "rtb-0c673d6df286a6f69",
            "subnet_id": "subnet-0dcccc830729592d8"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b5d619e51c262d0",
            "route_table_id": "rtb-0c673d6df286a6f69",
            "subnet_id": "subnet-0b119332f8a660499"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:security-group/sg-04e2458eaf052ef30",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e2458eaf052ef30",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s-control-plane-sg",
            "name_prefix": "",
            "owner_id": "891288190130",
            "revoke_rules_on_delete": false,
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "k8s-control-plane-sg",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster": "owned"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "k8s-control-plane-sg",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:security-group/sg-01c103c3eb4775d52",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c103c3eb4775d52",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24"
                ],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24"
                ],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s-data-plane-sg",
            "name_prefix": "",
            "owner_id": "891288190130",
            "revoke_rules_on_delete": false,
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "k8s-data-plane-sg",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster": "owned"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "k8s-data-plane-sg",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1361583753",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e2458eaf052ef30",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2091197652",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04e2458eaf052ef30",
            "security_group_rule_id": "sgr-0f51ddb8e845992eb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-939684829",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01c103c3eb4775d52",
            "security_group_rule_id": "sgr-09050fb32c1fc8335",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1275583134",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01c103c3eb4775d52",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-26211100",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c103c3eb4775d52",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:subnet/subnet-0dcccc830729592d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcccc830729592d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891288190130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "eks_lab_vpc_subnet-0",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster": "owned"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "eks_lab_vpc_subnet-0",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster": "owned"
            },
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:subnet/subnet-0b119332f8a660499",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b119332f8a660499",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891288190130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "eks_lab_vpc_subnet-1",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster": "owned"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "eks_lab_vpc_subnet-1",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster": "owned"
            },
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc/vpc-0b026817e8f1d1fa7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c278a5758d66803",
            "default_route_table_id": "rtb-0a161019b856bf776",
            "default_security_group_id": "sg-0c6708dcd3c98f91d",
            "dhcp_options_id": "dopt-0541c88831367b83c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b026817e8f1d1fa7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a161019b856bf776",
            "owner_id": "891288190130",
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "eks_lab_vpc",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster": "owned"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "eks_lab_vpc",
              "infra": "terraform",
              "kubernetes.io/cluster/eks-lab-cluster": "owned"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-04704e2dc45218980",
            "dns_entry": [
              {
                "dns_name": "vpce-04704e2dc45218980-sp4sx81b.ec2.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-04704e2dc45218980-sp4sx81b-eu-west-3b.ec2.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-04704e2dc45218980-sp4sx81b-eu-west-3a.ec2.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "ec2.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z051116323HF62NNV1PR3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-04704e2dc45218980",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0db71a55ce1817f55",
              "eni-0eb000f40630f09fd"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01c103c3eb4775d52"
            ],
            "service_name": "com.amazonaws.eu-west-3.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-0b119332f8a660499",
              "subnet-0dcccc830729592d8"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ec2",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ec2",
              "infra": "terraform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-031b0d784aee291d4",
            "dns_entry": [
              {
                "dns_name": "vpce-031b0d784aee291d4-nbe7q7a0.ec2messages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-031b0d784aee291d4-nbe7q7a0-eu-west-3a.ec2messages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-031b0d784aee291d4-nbe7q7a0-eu-west-3b.ec2messages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "ec2messages.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z0521954OBKTGDUVAHVJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-031b0d784aee291d4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04651e966901fc0d3",
              "eni-0ab4efadf59c527f0"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01c103c3eb4775d52"
            ],
            "service_name": "com.amazonaws.eu-west-3.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-0b119332f8a660499",
              "subnet-0dcccc830729592d8"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ec2messages",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ec2messages",
              "infra": "terraform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-0a263ad3f0428b40e",
            "dns_entry": [
              {
                "dns_name": "vpce-0a263ad3f0428b40e-71b2hrj3.api.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0a263ad3f0428b40e-71b2hrj3-eu-west-3a.api.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0a263ad3f0428b40e-71b2hrj3-eu-west-3b.api.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "api.ecr.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z10168711RZKUW83C5L0X"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0a263ad3f0428b40e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00e23b7ce8a2fc619",
              "eni-096496fb5508612b7"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01c103c3eb4775d52"
            ],
            "service_name": "com.amazonaws.eu-west-3.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0b119332f8a660499",
              "subnet-0dcccc830729592d8"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ecr.api",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ecr.api",
              "infra": "terraform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-041ad9621b4f71162",
            "dns_entry": [
              {
                "dns_name": "vpce-041ad9621b4f71162-c6jko5p8.dkr.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-041ad9621b4f71162-c6jko5p8-eu-west-3a.dkr.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-041ad9621b4f71162-c6jko5p8-eu-west-3b.dkr.ecr.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "dkr.ecr.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z10168762ZYZJAT0S4J9Z"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z10168762ZYZJAT0S4J9Z"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-041ad9621b4f71162",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-025dc4df66861bff5",
              "eni-0b9df7406925c5d7f"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01c103c3eb4775d52"
            ],
            "service_name": "com.amazonaws.eu-west-3.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0b119332f8a660499",
              "subnet-0dcccc830729592d8"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ecr.dkr",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ecr.dkr",
              "infra": "terraform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-00b103e0549c89ba5",
            "cidr_blocks": [
              "3.5.224.0/22",
              "16.12.18.0/23",
              "52.95.154.0/23",
              "16.12.20.0/24",
              "52.95.156.0/24"
            ],
            "id": "vpce-00b103e0549c89ba5",
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-23ad484a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c673d6df286a6f69"
            ],
            "service_name": "com.amazonaws.eu-west-3.s3",
            "state": "available",
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "s3",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "s3",
              "infra": "terraform"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-0659910c7da3858af",
            "dns_entry": [
              {
                "dns_name": "vpce-0659910c7da3858af-t2bggl8n.ssm.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0659910c7da3858af-t2bggl8n-eu-west-3b.ssm.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0659910c7da3858af-t2bggl8n-eu-west-3a.ssm.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "ssm.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z102397322R5PU0UBW4SN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0659910c7da3858af",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04ac43892ea7e1271",
              "eni-05cee2729660c2b9e"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01c103c3eb4775d52"
            ],
            "service_name": "com.amazonaws.eu-west-3.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0b119332f8a660499",
              "subnet-0dcccc830729592d8"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ssm",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ssm",
              "infra": "terraform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-0733df4298b5d656e",
            "dns_entry": [
              {
                "dns_name": "vpce-0733df4298b5d656e-9zenu2bh.ssmmessages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0733df4298b5d656e-9zenu2bh-eu-west-3b.ssmmessages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0733df4298b5d656e-9zenu2bh-eu-west-3a.ssmmessages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "ssmmessages.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z0521981Z5NU1YGJS1EM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0733df4298b5d656e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03e3b8512f5adcd1f",
              "eni-0f1a203657f864675"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01c103c3eb4775d52"
            ],
            "service_name": "com.amazonaws.eu-west-3.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-0b119332f8a660499",
              "subnet-0dcccc830729592d8"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "ssmmessages",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "ssmmessages",
              "infra": "terraform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:891288190130:vpc-endpoint/vpce-0d7f90357703ffb21",
            "dns_entry": [
              {
                "dns_name": "vpce-0d7f90357703ffb21-sqgu6suf.sts.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0d7f90357703ffb21-sqgu6suf-eu-west-3a.sts.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0d7f90357703ffb21-sqgu6suf-eu-west-3b.sts.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "sts.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z10158662IKNPM7ZV3WDR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0d7f90357703ffb21",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01827774bc9f2979e",
              "eni-04ff2334b59773e9c"
            ],
            "owner_id": "891288190130",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01c103c3eb4775d52"
            ],
            "service_name": "com.amazonaws.eu-west-3.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-0b119332f8a660499",
              "subnet-0dcccc830729592d8"
            ],
            "tags": {
              "LAB": "tesi_mattia",
              "Name": "sts",
              "infra": "terraform"
            },
            "tags_all": {
              "LAB": "tesi_mattia",
              "Name": "sts",
              "infra": "terraform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b026817e8f1d1fa7"
          },
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}